# stray

./: .gitignore  Cargo.toml  README.md
eww-tray/: Cargo.toml
eww-tray/example/: example.scss  example.yuck
eww-tray/src/: icon.rs  main.rs
gtk-tray/: Cargo.toml
gtk-tray/src/: main.rs  menu_bar.rs  menu_item.rs
src/: main.rs  tray.rs
src/dbus/: mod.rs  notifier_watcher_proxy.rs  notifier_watcher_service.rs
stray/: Cargo.toml
stray/examples/: simple.rs
stray/src/: error.rs  lib.rs
stray/src/dbus/: dbusmenu_proxy.rs  mod.rs  notifier_item_proxy.rs  notifier_watcher_service.rs
stray/src/message/: menu.rs  mod.rs  tray.rs
stray/src/notifier_host/: mod.rs
stray/src/notifier_watcher/: mod.rs  notifier_address.rs
systray-rs/: Cargo.toml  org.cannonical.indicator.xml
systray-rs/src/: lib.rs  menu.rs  tray.rs
systray-rs/src/dbus/: dbusmenu.rs  dbusmenu_proxy.rs  mod.rs  notifier_item_proxy.rs  notifier_watcher_proxy.rs  notifier_watcher_service.rs
systray-rs/src/message/: menu.rs  mod.rs  tray.rs
