[package]
name = "gtk-tray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.14", features = [ "v3_22" ]  }
glib = "0.14.8"
stray = { path = "../stray" }
tokio = { version = "1.17.0", features = ["full"] }
once_cell = "1.10.0"