[package]
name = "stray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "2.5.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
zbus = { version = "2", default-features = false, features = ["tokio", "gvariant"] }
anyhow = "1.0.56"
serde = "1.0.136"
byteorder = "1.4.3"
chrono = "0.4.19"

[[example]]
path = "examples/simple.rs"
name = "simple"