[package]
name = "stray"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A freedesktop StatusNotifierWatcher implementation"
repository = "https://github.com/oknozor/stray"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
zbus = { version = "3.13.1", default-features = false, features = ["tokio", "gvariant"] }
anyhow = "1.0.56"
serde = "1.0.136"
byteorder = "1.4.3"
chrono = "0.4.19"
log = "0.4.17"
thiserror = "1.0.31"
tracing = "0.1"

[[example]]
path = "examples/simple.rs"
name = "simple"
